error fixed for document parsing